Redirect to https://dt.in.th/

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!doctype html>
 <meta charset=utf-8>
 <title>dtinth.github.io</title>
-<h1>Hello, world!</h1>
+<style>body{background:#353433;color:#e9e8e7;text-align:center;padding: 64px 8px}a{color:#8b8685;text-decoration:none}</style>
+<meta http-equiv=refresh content='0;url=https://dt.in.th'>
+<a href='https://dt.in.th'>&rarr; dt.in.th</a>
